; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_pushnull.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_pushnull.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@JS_TNULL = common dso_local global i32 0, align 4
@STACK = common dso_local global %struct.TYPE_2__* null, align 8
@TOP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @js_pushnull(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @CHECKSTACK(i32 1)
  %4 = load i32, i32* @JS_TNULL, align 4
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @STACK, align 8
  %6 = load i64, i64* @TOP, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 %6
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 %4, i32* %8, align 4
  %9 = load i64, i64* @TOP, align 8
  %10 = add i64 %9, 1
  store i64 %10, i64* @TOP, align 8
  ret void
}

declare dso_local i32 @CHECKSTACK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
